terminating apprentice module

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     	<h1 @click="randomTable">test</h1>
      	 	<label>Sélection de la Table courante : </label>
 			 <input type="number" v-model="currentTable" name="currentTable" />
-			 <button @click="oneTableCalculate">Lancer le jeu !</button>
+			 <button @click="initGame">Lancer le jeu !</button>
      	</div>
 
 
