--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 Entraine-toi et deviens le meilleur !
             </p>
             <br />
-            <router-link :to="{ name: 'learning' }">Apprentissage</router-link>
+            <router-link :to="{ name: 'learning' }" class="btn-like">Apprentissage</router-link>
         </div>
         <div class="evaluation-link">
             <p>
                 Montre ce que tu sais faire, et évalue-toi !
             </p>
             <br />
-            <router-link :to="{ name: 'evaluation' }">Évaluation</router-link>
+            <router-link :to="{ name: 'evaluation' }" class="btn-like">Évaluation</router-link>
         </div>
     </div>
 </section>
@@ -59,9 +59,10 @@
     <h2>Apprentissage</h2>
     <div id="apprentice-module">
     	<div id="selection-part">
-     	 	<label>Sélection de la Table courante : </label>
+     	 	<label>Sélection de la table : </label>
+            <br />
 			 <input type="number" v-model="store.currentTable" name="currentTable" />
-			 <button @click="initGameAM">Lancer le jeu !</button>
+			 <button @click="initGameLearning">Lancer le jeu !</button>
      	</div>
     	<apprentice-part @event="verifyingResult"></apprentice-part>
     </div>
@@ -70,7 +71,7 @@
      <script id="apprenticePart" type="text/x-template">
      <div>
      
-		 <div id="apprentice-block" v-if="store.displayAM">
+		 <div id="apprentice-block" v-if="store.displayLearning">
 		  <span> Numéro de la question : {{ store.questionNumber }} </span>
 		 	<h1>Mode Apprentissage : Table de {{ store.currentTable }}</h1>
 		 	<div id="formula">
@@ -81,14 +82,14 @@
 		 		<ul id="propositions">
 		 			<li v-for="result in possibleResults" @click.prevent="$emit('event', result)"> {{ result }}</li>
 		 		</ul>
-		 		<span>{{ store.succeed }}<br/></span>
 		 		<span> <br> Temps du chrono : {{ store.displayIntermediateTime }}</span>
+                <br />
 		 		<span v-if="store.succeed===true" class="answer good">Bonne réponse !!!! t'es un champion !</span>
 		 		<span v-if="store.succeed===false" class="answer wrong">Mauvaise réponse ! Essaie encore une fois !</span>
 		 	</div>
 
 		</div> 
-		<div id="winner" v-if="store.win===true"><h1>Félicitations ! tu viens de terminer le jeu, tente ta chance avec une nouvelle table!!</h1>
+		<div id="winner" v-if="store.win===true"><h2>Félicitations ! Tu viens de terminer le jeu, tente ta chance avec une nouvelle table!!</h2>
 		<h2>Ton score : {{ store.statsAnswer }} % de bonnes réponses...</h2>
 		<h3> voici ton temps : chrono global : {{ store.displayGlobalTime }} <br> temps global en seconde : {{ store.globalTimeResult }}</h3>
 			<div id="medal">
@@ -103,11 +104,47 @@
     <script id="evaluation-template" type="text/x-template">
 <section>
     <h2>Évaluation</h2>
-    <div>
-
+    <div id="evaluation-module">
+        <div id="selection-part">
+            <span>Lance la partie dès que t'es prêt ! :)</span><br />
+            <button @click="initGameTG">Lancer le jeu !</button>
+            <total-game @event="verifyingResult"></total-game>
+        </div>
     </div>
 </section>
     </script>
+     <script id="totalGame" type="text/x-template">
+<div>
+    <div id="totalGame-block" v-if="store.displayTG">
+        <span> Numéro de la question : {{ store.questionNumber }} </span>
+        <h1>Mode Evaluation : </h1>
+        <div id="formula">
+            {{ store.currentOperand }} *  {{ store.currentTable }} =
+        </div>
+        
+        <div id="resultDisplay">
+            <ul>
+                <li v-for="result in possibleResults" @click.prevent="$emit('event', result)"> {{ result }}</li>
+            </ul>
+            <span>{{ store.succeed }}<br/></span>
+            <span> <br> Temps du chrono : {{ store.displayIntermediateTime }}</span>
+            <span v-if="store.succeed===true">Bonne réponse !!!! t'es un champion !</span>
+            <span v-if="store.succeed===false">Mauvaise réponse ! Essaie encore une fois !</span>
+        </div>
+
+    </div> 
+    <div id="winner" v-if="store.win===true"><h2>Félicitations ! Tu viens de terminer le jeu, essaie de faire encore mieux !</h2>
+    <h2>Ton score : {{ store.statsAnswer }} % de bonnes réponses...</h2>
+    <h3> voici ton temps : chrono global : {{ store.displayGlobalTime }} <br> temps global en seconde : {{ store.globalTimeResult }}</h3>
+        <div id="medal">
+            <img v-if="store.goldStar===true" src="images/goldStar.png"/>
+            <img v-if="store.silverStar===true" src="images/silverStar.png"/>
+            <img v-if="store.bronzeStar===true" src="images/bronzeStar.png"/>
+        </div>
+    </div>
+
+</div>
+     </script>
     <script src="js/libs/vue/dist/vue.js"></script>
     <script src="js/libs/vue-router/dist/vue-router.js"></script>
     <script src="js/source.js"></script>
