Huge refactoring to separate the code parts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Jeux éducatifs</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -144,10 +143,18 @@
     </div>
 
 </div>
-     </script>
+    </script>
+    <!-- LIBS -->
+
+    <!-- External -->
     <script src="js/libs/vue/dist/vue.js"></script>
     <script src="js/libs/vue-router/dist/vue-router.js"></script>
+
+    <!-- Internal -->
     <script src="js/source.js"></script>
-    <script src="js/games.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/games/learning.js"></script>
+    <script src="js/games/evaluation.js"></script>
+    <script src="js/routing.js"></script>
 </body>
 </html>
