--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@
                     </ul>
                     <span>Temps du chrono : {{ store.displayIntermediateTime }}</span>
                     <br />
-                    <span v-if="store.succeed===true" class="answer good">Bonne réponse !!!! T'es un champion !</span>
+                    <span v-if="store.succeed" class="answer good">Bonne réponse !!!! T'es un champion !</span>
                     <span v-if="store.succeed===false" class="answer wrong">Mauvaise réponse ! Essaie encore une fois !</span>
                 </div>
             </div>
-            <div id="apprentice-winner" v-if="store.apprenticeWin===true"><h2>Félicitations ! Tu viens de terminer le jeu, tente ta chance avec une nouvelle table!!</h2>
+            <div id="apprentice-winner" v-if="store.apprenticeWin"><h2>Félicitations ! Tu viens de terminer le jeu, tente ta chance avec une nouvelle table!!</h2>
                 <h2>Ton score : {{ store.statsAnswer }} % de bonnes réponses...</h2>
                 <h3>Voici ton temps : {{ store.displayGlobalTime }}</h3>
                 <h3>Temps global en seconde : {{ store.globalTimeResult }}</h3>
                 <div id="medal">
-                    <img v-if="store.goldStar===true" src="images/goldStar.png"/>
-                    <img v-if="store.silverStar===true" src="images/silverStar.png"/>
-                    <img v-if="store.bronzeStar===true" src="images/bronzeStar.png"/>
+                    <img v-if="store.goldStar" src="images/goldStar.png"/>
+                    <img v-if="store.silverStar" src="images/silverStar.png"/>
+                    <img v-if="store.bronzeStar" src="images/bronzeStar.png"/>
                 </div>
             </div>
         </div>
@@ -121,19 +121,19 @@
                         <li v-for="result in possibleResults" @click.prevent="$emit('event', result)"> {{ result }}</li>
                     </ul>
                     <span>Temps du chrono : {{ store.displayIntermediateTime }}</span><br />
-                    <span v-if="store.succeed===true" class="answer good">Bonne réponse !!!! T'es un champion !</span>
+                    <span v-if="store.succeed" class="answer good">Bonne réponse !!!! T'es un champion !</span>
                     <span v-if="store.succeed===false" class="answer wrong">Mauvaise réponse ! Essaie encore une fois !</span>
                 </div>
             </div> 
-            <div id="evaluation-winner" v-if="store.win===true">
+            <div id="evaluation-winner" v-if="store.evaluationWin">
                 <h2>Félicitations ! Tu viens de terminer le jeu, essaie de faire encore mieux !</h2>
                 <h2>Ton score : {{ store.statsAnswer }} % de bonnes réponses...</h2>
                 <h3>Voici ton temps : {{ store.displayGlobalTime }}</h3>
                 <h3>Temps global en seconde : {{ store.globalTimeResult }}</h3>
                 <div id="medal">
-                    <img v-if="store.goldStar===true" src="images/goldStar.png"/>
-                    <img v-if="store.silverStar===true" src="images/silverStar.png"/>
-                    <img v-if="store.bronzeStar===true" src="images/bronzeStar.png"/>
+                    <img v-if="store.goldStar" src="images/goldStar.png"/>
+                    <img v-if="store.silverStar" src="images/silverStar.png"/>
+                    <img v-if="store.bronzeStar" src="images/bronzeStar.png"/>
                 </div>
             </div>
 
