Saving global training results in the browser local storage

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 
     <!-- Internal -->
     <script src="js/source.js"></script>
+    <script src="js/localStorageHandler.js"></script>
     <script src="js/home.js"></script>
     <script src="js/games/learning.js"></script>
     <script src="js/games/evaluation.js"></script>
